syntax = "proto3";

package receiver;
option go_package = "./pkg/receiver";

// Messages --------------------------------------------------------------------

message SubscribeRequest {
  string topicName = 1;
  string hostName = 2;
  int32 port = 3;
}

message SubscribeResponse {
  bool success = 1;
  string error = 2;
}

message GetMessageRequest {
  string message = 1;
}

message GetMessageResponse {
  bool success = 1;
}

// Services --------------------------------------------------------------------

service ReceiverService {
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);
  rpc GetMessage(GetMessageRequest) returns (GetMessageResponse);
}